--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 
 <link rel="next" href="me-math-machine.html"/>
-<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -82,28 +81,23 @@
 
 <ul class="summary">
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a>
-<ul>
+<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a><ul>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
 <li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html"><i class="fa fa-check"></i>Teaching Notes</a>
-<ul>
+<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html"><i class="fa fa-check"></i>Teaching Notes</a><ul>
 <li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
 <li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
 <li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a>
-<ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a>
-<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a><ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a><ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a>
-<ul>
+<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a><ul>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
 <li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
@@ -138,11 +132,11 @@
 <h1>Apurva Nakade</h1>
 <p><img src="images/me0.jpg" width="200px" class="left" /></p>
 <p>I'm a postdoc at the <a href="http://www.math.uwo.ca/">University of Western Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
-I am doing research in algebraic topology and homotopy theory.</p>
+I do research in algebraic topology and homotopy theory.</p>
 <p>In addition to research, I am very passionate about improving math education. I want to
 modernize math-ed and bring it to the 21st century through the use of new technological innovations
 in teaching and in the process make it more accessible and equitable.</p>
-<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>, organizing the topology boot-camp, applying for jobs.</p>
+<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>, applying for jobs.</p>
 
 </div>
             </section>
