--- a/teaching-portfolio/index.html
+++ b/teaching-portfolio/index.html
@@ -32,7 +32,6 @@
   
 
 <link rel="next" href="teaching-responsibilities.html"/>
-<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -84,15 +83,12 @@
 <li><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a> </li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a>
-<ul>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a><ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#teaching-philosophy"><i class="fa fa-check"></i><b>1.1</b> Teaching Philosophy</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a>
-<ul>
+<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a><ul>
 <li class="chapter" data-level="2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#course-instruction"><i class="fa fa-check"></i><b>2.1</b> Course Instruction</a></li>
-<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a>
-<ul>
+<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a><ul>
 <li class="chapter" data-level="2.2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:discrete-math"><i class="fa fa-check"></i><b>2.2.1</b> Discrete Structures for Engineering (UWO, Fall 2020)</a></li>
 <li class="chapter" data-level="2.2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:honors-single-variable"><i class="fa fa-check"></i><b>2.2.2</b> Honors Single Variable Calculus (JHU, Fall 2018,19)</a></li>
 <li class="chapter" data-level="2.2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:intersession"><i class="fa fa-check"></i><b>2.2.3</b> Intersession courses (JHU, Winter 2017,2018)</a></li>
@@ -100,12 +96,10 @@
 <li class="chapter" data-level="2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#directed-reading-programs"><i class="fa fa-check"></i><b>2.3</b> Directed Reading Programs</a></li>
 <li class="chapter" data-level="2.4" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#canadausa-mathcamp"><i class="fa fa-check"></i><b>2.4</b> Canada/USA Mathcamp</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a>
-<ul>
+<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a><ul>
 <li class="chapter" data-level="3.1" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#end-of-course-surveys"><i class="fa fa-check"></i><b>3.1</b> End of Course Surveys</a></li>
-<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#student-comments"><i class="fa fa-check"></i><b>3.2</b> Student Comments</a></li>
-<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.3</b> Teaching Awards</a></li>
-<li class="chapter" data-level="3.4" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.4</b> Peer Comments</a></li>
+<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.2</b> Teaching Awards</a></li>
+<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.3</b> Peer Comments</a></li>
 </ul></li>
 <li class="divider"></li>
 &nbsp;
@@ -131,7 +125,7 @@
 <h1 class="title">Teaching Portfolio</h1>
 <p class="author"><em>Apurva Nakade <br /> Postdoctoral Fellow <br /> Department of Mathematics <br /> University of Western Ontario.</em></p>
 </div>
-<div id="introduction" class="section level1" number="1">
+<div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
 <p>I am a postdoc in the math department at the University of Western Ontario.</p>
 <p>I believe that higher education is a fundamental right and should be freely available to anyone who is willing to put in the time and the right kind of effort.
@@ -142,7 +136,7 @@ I’m very passionate about the use of technology in education.
 My computer engineering background puts me in a unique position to leverage these tools and use them to supplement (and not replace) math teachers everywhere. These can be used to create courses that can reach a much wider audience than was previously possible without comprising the quality of education.</p>
 <p>I do not see online classes as being subpar to in-person classes.
 If anything, I see the current situation as an opportunity for us, math educators, to radically rethink our definition of a math classroom.</p>
-<div id="teaching-philosophy" class="section level2" number="1.1">
+<div id="teaching-philosophy" class="section level2">
 <h2><span class="header-section-number">1.1</span> Teaching Philosophy</h2>
 <p><strong>Teaching Philosophy.</strong>
 The guiding principle for my teaching is ``the objective of education is learning, not teaching.’’
@@ -159,7 +153,7 @@ Following design principles, I’ve made my course as easy to follow as possible
 Over the summer, I explored several textbooks and chose an online one that allowed me to provide an active learning environment asynchronously.
 Each week, I make short introductory videos and embed them directly at the start of each section, along with learning objectives and any special comments.
 I assign weekly, short auto-graded assignments within the textbook, which provide immediate feedback.
-I maintain a blog (\href{<a href="https://notleftasanexercise.wordpress.com/" class="uri">https://notleftasanexercise.wordpress.com/</a>.<strong>{notleftasanexercise.wordpress.com.</strong>) to document and reflect upon my teaching.
+I maintain a <a href="https://notleftasanexercise.wordpress.com/">blog</a> to document and reflect upon my teaching.
 Students have been very receptive, and I have received a lot of positive feedback from them.</p>
 <p>For the exams, my focus has been on ensuring that students who do not cheat are not at a disadvantage while still ensuring that students’ mental health is not adversely affected by the pressures of online assessments.
 In a team consisting of me, my postdoc advisor, and two students, we created a randomized pool of hundreds of questions on WeBWork (open source platform supported by MAA).</p>
