--- a/teaching-portfolio/teaching-responsibilities.html
+++ b/teaching-portfolio/teaching-responsibilities.html
@@ -32,7 +32,6 @@
   
 <link rel="prev" href="index.html"/>
 <link rel="next" href="teaching-effectiveness.html"/>
-<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -84,15 +83,12 @@
 <li><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a> </li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a>
-<ul>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a><ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#teaching-philosophy"><i class="fa fa-check"></i><b>1.1</b> Teaching Philosophy</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a>
-<ul>
+<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a><ul>
 <li class="chapter" data-level="2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#course-instruction"><i class="fa fa-check"></i><b>2.1</b> Course Instruction</a></li>
-<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a>
-<ul>
+<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a><ul>
 <li class="chapter" data-level="2.2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:discrete-math"><i class="fa fa-check"></i><b>2.2.1</b> Discrete Structures for Engineering (UWO, Fall 2020)</a></li>
 <li class="chapter" data-level="2.2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:honors-single-variable"><i class="fa fa-check"></i><b>2.2.2</b> Honors Single Variable Calculus (JHU, Fall 2018,19)</a></li>
 <li class="chapter" data-level="2.2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:intersession"><i class="fa fa-check"></i><b>2.2.3</b> Intersession courses (JHU, Winter 2017,2018)</a></li>
@@ -100,12 +96,10 @@
 <li class="chapter" data-level="2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#directed-reading-programs"><i class="fa fa-check"></i><b>2.3</b> Directed Reading Programs</a></li>
 <li class="chapter" data-level="2.4" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#canadausa-mathcamp"><i class="fa fa-check"></i><b>2.4</b> Canada/USA Mathcamp</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a>
-<ul>
+<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a><ul>
 <li class="chapter" data-level="3.1" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#end-of-course-surveys"><i class="fa fa-check"></i><b>3.1</b> End of Course Surveys</a></li>
-<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#student-comments"><i class="fa fa-check"></i><b>3.2</b> Student Comments</a></li>
-<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.3</b> Teaching Awards</a></li>
-<li class="chapter" data-level="3.4" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.4</b> Peer Comments</a></li>
+<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.2</b> Teaching Awards</a></li>
+<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.3</b> Peer Comments</a></li>
 </ul></li>
 <li class="divider"></li>
 &nbsp;
@@ -127,9 +121,9 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="teaching-responsibilities" class="section level1" number="2">
+<div id="teaching-responsibilities" class="section level1">
 <h1><span class="header-section-number">2</span> Teaching Responsibilities</h1>
-<div id="course-instruction" class="section level2" number="2.1">
+<div id="course-instruction" class="section level2">
 <h2><span class="header-section-number">2.1</span> Course Instruction</h2>
 <table>
 <colgroup>
@@ -333,9 +327,9 @@ material. I was one of the two instructors for this course, and there
 were approximately 90 students in the class.</p>
 </div>
 </div>
-<div id="innovative-course-development" class="section level2" number="2.2">
+<div id="innovative-course-development" class="section level2">
 <h2><span class="header-section-number">2.2</span> Innovative Course Development</h2>
-<div id="sec:discrete-math" class="section level3" number="2.2.1">
+<div id="sec:discrete-math" class="section level3">
 <h3><span class="header-section-number">2.2.1</span> Discrete Structures for Engineering (UWO, Fall 2020)</h3>
 <p>Over the summer, I had to adapt a regular Discrete Math course to an
 online asynchronous setting. While I was preparing for the course, my
@@ -366,12 +360,10 @@ WeBWork because it is robust and reliable, and it allows for both
 internal randomizations within a question and randomization between
 questions. Having an extensive repository of questions enables me to
 create unique exams for every student.</p></li>
-<li><p><strong>Summer prep:</strong> With my postdoc advisor and two students’ help, we
-designed a repository of several hundred problems for discrete math
-on WeBWork. This repository is easily portable and can be easily
-adapted to any discrete math course. Furthermore, because WebWork is
-open-source this repository can be used by anyone freely. Providing
-cheap and accessible education has always been one of my priorities.</p></li>
+<li><p><strong>WeBWorK questions repository:</strong> With my postdoc
+advisor and two students’ help, we designed a
+repository of several hundred problems for discrete math on WeBWork. This repository is easily
+portable and can be adapted to any discrete math course. Furthermore, because WeBWorK is open-source this repository can be used by anyone freely</p></li>
 <li><p><strong>Discussion forums:</strong> I realized early on that communication was
 going to be the key to this course’s smooth running. For this
 reason, I choose Piazza as a discussion forum to answer student
@@ -380,10 +372,12 @@ is very intuitive, easily searchable, and allows for anonymous
 posts. A demo of the discussion forum can be found here:
 <a href="https://piazza.com/demo_login?nid=kd1rr8nxc6z4b5&amp;auth=f76e59e" class="uri">https://piazza.com/demo_login?nid=kd1rr8nxc6z4b5&amp;auth=f76e59e</a></p></li>
 <li><p><strong>Centralized access:</strong>
-With students getting overwhelmed with the onslaught of online tools, it was necessary to make easily accessible. For this, with a little bit of hacking, I embedded all the above websites onto the school’s LMS.</p></li>
+With students getting overwhelmed with the onslaught of online tools, it was
+necessary to make easily accessible. For this, with a little bit of tweaking, I embedded all the above
+websites into the school’s LMS.</p></li>
 </ul>
 </div>
-<div id="sec:honors-single-variable" class="section level3" number="2.2.2">
+<div id="sec:honors-single-variable" class="section level3">
 <h3><span class="header-section-number">2.2.2</span> Honors Single Variable Calculus (JHU, Fall 2018,19)</h3>
 <p>At JHU, I was fortunate to develop and teach Honors Single Variable
 Calculus for two semesters. This is an experimental full semester
@@ -400,7 +394,7 @@ profound insight into the process of student learning and helped me
 combat expert blind spots. The materials for this course can be found
 here: <a href="https://apurvanakade.github.io/courses/2018_Honors_Calc/index.html">apurvanakade.github.io/courses/2018_Honors_Calc/</a></p>
 </div>
-<div id="sec:intersession" class="section level3" number="2.2.3">
+<div id="sec:intersession" class="section level3">
 <h3><span class="header-section-number">2.2.3</span> Intersession courses (JHU, Winter 2017,2018)</h3>
 <p>I taught two week-long intersession courses titled <em>Hitchhiker’s Guide
 to Algebraic Topology</em> and <em>Symmetries &amp; Polynomials</em>. I taught both of
@@ -423,7 +417,7 @@ of two or three to work on problems together. The problem sets for this
 course can be found <a href="drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view">here</a>.</p>
 </div>
 </div>
-<div id="directed-reading-programs" class="section level2" number="2.3">
+<div id="directed-reading-programs" class="section level2">
 <h2><span class="header-section-number">2.3</span> Directed Reading Programs</h2>
 <p>The Directed Reading Program (DRP) is a program that pairs undergraduate
 students with graduate students for one-on-one independent studies over
@@ -439,7 +433,7 @@ undergraduate math community. So far, this program has seen much
 interest from undergraduates, and we have seen increased participation
 from both the mentor and the mentee sides.</p>
 </div>
-<div id="canadausa-mathcamp" class="section level2" number="2.4">
+<div id="canadausa-mathcamp" class="section level2">
 <h2><span class="header-section-number">2.4</span> Canada/USA Mathcamp</h2>
 <p>I taught at an intensive, residential, five-week summer camp for
 mathematically talented high school kids for five summers. The academic
