--- a/teaching-portfolio/teaching-effectiveness.html
+++ b/teaching-portfolio/teaching-effectiveness.html
@@ -32,7 +32,6 @@
   
 <link rel="prev" href="teaching-responsibilities.html"/>
 
-<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -84,15 +83,12 @@
 <li><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a> </li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a>
-<ul>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a><ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#teaching-philosophy"><i class="fa fa-check"></i><b>1.1</b> Teaching Philosophy</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a>
-<ul>
+<li class="chapter" data-level="2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html"><i class="fa fa-check"></i><b>2</b> Teaching Responsibilities</a><ul>
 <li class="chapter" data-level="2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#course-instruction"><i class="fa fa-check"></i><b>2.1</b> Course Instruction</a></li>
-<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a>
-<ul>
+<li class="chapter" data-level="2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#innovative-course-development"><i class="fa fa-check"></i><b>2.2</b> Innovative Course Development</a><ul>
 <li class="chapter" data-level="2.2.1" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:discrete-math"><i class="fa fa-check"></i><b>2.2.1</b> Discrete Structures for Engineering (UWO, Fall 2020)</a></li>
 <li class="chapter" data-level="2.2.2" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:honors-single-variable"><i class="fa fa-check"></i><b>2.2.2</b> Honors Single Variable Calculus (JHU, Fall 2018,19)</a></li>
 <li class="chapter" data-level="2.2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#sec:intersession"><i class="fa fa-check"></i><b>2.2.3</b> Intersession courses (JHU, Winter 2017,2018)</a></li>
@@ -100,12 +96,10 @@
 <li class="chapter" data-level="2.3" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#directed-reading-programs"><i class="fa fa-check"></i><b>2.3</b> Directed Reading Programs</a></li>
 <li class="chapter" data-level="2.4" data-path="teaching-responsibilities.html"><a href="teaching-responsibilities.html#canadausa-mathcamp"><i class="fa fa-check"></i><b>2.4</b> Canada/USA Mathcamp</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a>
-<ul>
+<li class="chapter" data-level="3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html"><i class="fa fa-check"></i><b>3</b> Teaching Effectiveness</a><ul>
 <li class="chapter" data-level="3.1" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#end-of-course-surveys"><i class="fa fa-check"></i><b>3.1</b> End of Course Surveys</a></li>
-<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#student-comments"><i class="fa fa-check"></i><b>3.2</b> Student Comments</a></li>
-<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.3</b> Teaching Awards</a></li>
-<li class="chapter" data-level="3.4" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.4</b> Peer Comments</a></li>
+<li class="chapter" data-level="3.2" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#teaching-awards"><i class="fa fa-check"></i><b>3.2</b> Teaching Awards</a></li>
+<li class="chapter" data-level="3.3" data-path="teaching-effectiveness.html"><a href="teaching-effectiveness.html#peer-comments"><i class="fa fa-check"></i><b>3.3</b> Peer Comments</a></li>
 </ul></li>
 <li class="divider"></li>
 &nbsp;
@@ -127,9 +121,9 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="teaching-effectiveness" class="section level1" number="3">
+<div id="teaching-effectiveness" class="section level1">
 <h1><span class="header-section-number">3</span> Teaching Effectiveness</h1>
-<div id="end-of-course-surveys" class="section level2" number="3.1">
+<div id="end-of-course-surveys" class="section level2">
 <h2><span class="header-section-number">3.1</span> End of Course Surveys</h2>
 <p>The following table presents scores from questions posed through the end
 of semester survey collected and are based on a scale of 1 (Strongly
@@ -192,115 +186,8 @@ survey for the Winter 2019 semester because of Covid. The complete data,
 which includes student comments, can be found here:
 <a href="https://tinyurl.com/nakade-evals" class="uri">https://tinyurl.com/nakade-evals</a></p>
 </div>
-<div id="student-comments" class="section level2" number="3.2">
-<h2><span class="header-section-number">3.2</span> Student Comments</h2>
-<p>This section contains selected comments left by students on instructor evaluation forms.</p>
-<p><strong>Discrete Structures for Engineering, UWO 2020</strong></p>
-<ul>
-<li><p>The instructor for this course has done a very good job, easy
-communication between students and instructors is essential
-especially this year, and he has done the best job out of all my
-courses. I appreciate the work he has put into the course to ensure
-that we get the most out of it</p></li>
-<li><p>Professor Apurva is one of the rare professors that is excellent in
-explaining mathematics using examples and helping build the
-conceptual image in my mind. I am taking this course again because I
-dropped it simply because I wasn’t understanding the basic concept
-that the professor explained by using proof. Professor’s method of
-using an iPad and explain videos is parallel to watching Khan
-Academy. His explanations are clear and also states what is common
-for some things we learn about in the real world and what is not. He
-also gives boundaries about what a concept is and what it isn’t on
-top of explaining the concept. And the PA activities do an excellent
-job of visualising the imagined concept that Professor Apurva
-sparked. We also utilize Piazza to communicate with friends and ask
-questions. It is also especially useful for seeing what most
-students are struggling with and try to attempt those problems
-yourselves and also get an opportunity to answer if you do know the
-solution.</p></li>
-<li><p>While some of the material was at first a bit confusing, Professor
-Nakade does an excellent job at explaining and giving examples
-during his pre–filmed lectures that help a lot with my
-understanding. Additionally, he adds comments that helps reassure
-students that some material will take a long time to understand but
-is doable with practice. Personally I find this very helpful as this
-shows me that he recognizes when the course would be a little
-difficult and tries to minimize the confusion and disappointment
-students have when they don’t get it the first time. Furthermore,
-the midterm evaluation was a very fair assessment and despite being
-proctored differently, it seems like something we would likely
-receive in an in–person evaluation and that is very much
-appreciated.</p></li>
-</ul>
-<p><strong>Calculus I, UWO 2019</strong></p>
-<ul>
-<li><p>You are easily the best professor I have had so far. I find that
-your teaching methods are very effective in terms of fully
-explaining and presenting the concepts of calculus, and the
-integration of examples within the notes have been very helpful as
-they relate to the questions given on webwork and the exams.</p></li>
-<li><p>Instructor Nakade is always willing to help us solve any problems we
-are stuck on or unsure of. He will make many efforts to make time to
-meet with us outside of his office hours if we are unable to meet
-him during those times, to provide us with as much help as he can
-about any of the concepts covered in this class.</p></li>
-<li><p>Apurva Nakade has so far been the best professor I have had. I
-believe that his methods for teaching and leading a class is highly
-effective in terms of presenting ideas and concepts in a way that
-can be learned efficiently. The examples and homework provided have
-been very helpful in preparation for the quizzes and exams, and his
-direct communication with the students is extremely helpful and
-effective. The notes are very structured and planned, and this level
-of focus improves the ability of the students to learn from the
-notes.</p></li>
-</ul>
-<p><strong>Honors Single Variable Calculus, JHU 2018</strong></p>
-<ul>
-<li><p>The course was heavily tailored to the students and was a good
-introduction to proofs. It was pretty enjoyable, and I liked the
-class structure. The professor was generally pretty helpful,
-especially during office hours. I understand how to write
-mathematical proofs much better and I feel more confident in my
-understanding of calculus.</p></li>
-<li><p>You learn a lot in this course in a very short period of time. The
-deeper understanding of calculus and proofs. Working through
-problems in class in groups. He makes himself available often for
-office hours and is helpful during them. He made the homework sheets
-himself and they are very well done and put together. The course
-website with the accumulative note sheet is super helpful. There is
-a lot of forgiveness in the grading, so it’s okay if you screw
-something up.</p></li>
-<li><p>Its a brilliant course thats very stimulating and provides you
-detailed grounding in the proofs for calculus.</p></li>
-</ul>
-<p><strong>Mathcamp</strong></p>
-<ul>
-<li><p>I loved Apurva’s enthusiasm for the subjects he taught! I like how
-he connected everything to topology. It was really fun doing chat
-blasts as well as breakout room activities because we were able to
-stay engaged. Also, I appreciate that the problems we solved in
-breakout rooms were relatively easy so we weren’t stuck, and then we
-would have the remaining time to make more connections. Overall
-Apurva is super cheery and fun to be around!</p></li>
-<li><p>Apurva is an amazing teacher! His explanations are very clear and
-easy to understand. He includes plenty of examples that support the
-lecture. He has also been very helpful during TAU, guiding me
-through any material I don’t completely understand and answering
-questions. Apurva has also heavily contributed to the positive
-atmosphere at Mathcamp. He is very friendly and his humor never
-fails to make campers laugh.</p></li>
-<li><p>Even though a lot of Apurva’s classes have been challenging for me,
-he was still able to help me follow the material. He’s great at
-explaining topics in math and is really good at making any idea feel
-intuitive and finally make sense. He’s also very encouraging and
-enthusiastic when explaining and happy to walk through a problem
-slowly with you for any class. Finally, he’s super fun to talk to
-about basically anything (math and otherwise) and is overall a
-really friendly and approachable person.</p></li>
-</ul>
-</div>
-<div id="teaching-awards" class="section level2" number="3.3">
-<h2><span class="header-section-number">3.3</span> Teaching Awards</h2>
+<div id="teaching-awards" class="section level2">
+<h2><span class="header-section-number">3.2</span> Teaching Awards</h2>
 <ul>
 <li><p><a href="https://sites.krieger.jhu.edu/math-intranet/for-graduate-students/graduate-awards/"><em>William Kelso Morrill Award for Excellence in Mathematics</em></a>, JHU
 2019<br />
@@ -328,8 +215,8 @@ undergraduate education at the Krieger School and funded by the Joel
 Dean Foundation created by Professor Dean in 1957.</p></li>
 </ul>
 </div>
-<div id="peer-comments" class="section level2" number="3.4">
-<h2><span class="header-section-number">3.4</span> Peer Comments</h2>
+<div id="peer-comments" class="section level2">
+<h2><span class="header-section-number">3.3</span> Peer Comments</h2>
 <p>In Winter 2020, I participated in the Teaching Mentor Program at UWO.
 The Teaching Mentor Program is a cohort-based hands-on learning experience. Participants work with a group of 4-5 interdisciplinary graduate students and postdoctoral scholars to observe and offer feedback on one another’s teaching. Groups will meet multiple times over the semester to act as students in one another’s teaching demonstrations. My group had four participants whose feedback is attached here.</p>
 <iframe src="https://drive.google.com/file/d/1Dl5DvyAlWiH6yxc4AmfXEOpvDb5z48ri/preview" style="width: 100%; 
